@@ -1,3 +1,11 @@
+2008-11-05  Andy Buckley  <andy@insectnation.org>
+
+	* Example of a plugin analyis now in plugindemo, with a make check
+	test to make sure that the plugin analysis is recognised by the
+	command line "rivet" tool.
+
+	* GCC 4.3 fix to mat-vec tests.
+
 2008-11-04  Andy Buckley  <andy@insectnation.org>
 
 	* Adding native logger control from Python interface.
